# py_wininet

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
_py_wininet/: _py_wininet.c  _py_wininet.h  session.c  stream.c
py_wininet/: __init__.py  request.py
test/: echo_server.py  test_Session.py  test_ext.py
