[metadata]
name = py_wininet
description = A python package that enable Wininet http and https accesses from `urllib.request`.

author = SBA
author_email = s-ball@laposte.net
url = https://github.com/s-ball/py_wininet
license = MIT License
project_urls =
    # Changelog = https://github.com/s-ball/py_wininet/blob/master/CHANGES.txt
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages =
    py_wininet
python_requires = >=3.7

[bdist_wheel]
py_limited_api = cp37